--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -241,8 +241,8 @@
   </ItemGroup>
 
   <Target Name="LiveTests"> 
-    <MakeDir Directories="TestResults"/> 
-    <Exec Command="packages\xunit.runners.1.9.2\tools\xunit.console.clr4.exe  @(LiveTestDlls) /trait &quot;AcceptanceType=LiveBVT&quot; /html &quot;TestResults\Live.%(Filename).html&quot;" />
+    <MakeDir Directories="$(TestOutputDirectory)" ContinueOnError="false" />
+    <Exec Command="packages\xunit.runners.1.9.2\tools\xunit.console.clr4.exe  @(LiveTestDlls) /trait &quot;AcceptanceType=LiveBVT&quot; /html &quot;$(TestOutputDirectory)\Live.%(Filename).html&quot;" />
   </Target> 
 
 
