--- a/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Azure.Management.Authorization" version="0.11.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.DataFactories" version="0.10.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Resources" version="2.7.0-preview" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.Management.Storage" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Monitoring" version="2.2.0-preview" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
